[tool.poetry]
name = "guarana"
version = "2.4.2"
description = ""
authors = [
  "Rodrigo Godinho <rodrigolegod@gmail.com>",
  "Antonio Bertino <antoniontv18@gmail.com>",
  "Gabriel Montañola <gabriel@montanola.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
segment-analytics-python = "^2.2.0"
loguru = "^0.6.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
